atualização pasta npc e pasta db

--- a/npc/re/scripts_jobs.conf
+++ b/npc/re/scripts_jobs.conf
@@ -5,7 +5,7 @@
 // ------------------------- Job Quests -------------------------
 // - 1-1
 //npc: npc/re/jobs/1-1/acolyte.txt
-npc: npc/re/jobs/1-1/archer.txt
+//npc: npc/re/jobs/1-1/archer.txt
 //npc: npc/re/jobs/1-1/mage.txt
 //npc: npc/re/jobs/1-1/merchant.txt
 //npc: npc/re/jobs/1-1/swordman.txt
@@ -14,6 +14,7 @@ npc: npc/re/jobs/1-1/archer.txt
 // - 1-1 traduzido
 npc: npc/re/jobs/1-1/pt-br/swordman.txt
 npc: npc/re/jobs/1-1/pt-br/acolyte.txt
+npc: npc/re/jobs/1-1/pt-br/archer.txt
 npc: npc/re/jobs/1-1/pt-br/merchant.txt
 npc: npc/re/jobs/1-1/pt-br/mage.txt
 npc: npc/re/jobs/1-1/pt-br/thief.txt
@@ -33,12 +34,12 @@ npc: npc/re/jobs/3-1/rune_knight.txt
 npc: npc/re/jobs/3-1/warlock.txt
 npc: npc/re/jobs/3-1/guillotine_cross.txt
 // - 3-1 traduzido
-//npc: npc/re/jobs/3-1/archbishop.txt
-//npc: npc/re/jobs/3-1/mechanic.txt
+//npc: npc/re/jobs/3-1/pt-br/archbishop.txt
+//npc: npc/re/jobs/3-1/pt-br/mechanic.txt
 npc: npc/re/jobs/3-1/pt-br/ranger.txt
-//npc: npc/re/jobs/3-1/rune_knight.txt
-//npc: npc/re/jobs/3-1/warlock.txt
-//npc: npc/re/jobs/3-1/guillotine_cross.txt
+//npc: npc/re/jobs/3-1/pt-br/rune_knight.txt
+//npc: npc/re/jobs/3-1/pt-br/warlock.txt
+//npc: npc/re/jobs/3-1/pt-br/guillotine_cross.txt
 // - 3-2
 npc: npc/re/jobs/3-2/genetic.txt
 npc: npc/re/jobs/3-2/minstrel.txt
@@ -48,7 +49,9 @@ npc: npc/re/jobs/3-2/sorcerer.txt
 npc: npc/re/jobs/3-2/sura.txt
 npc: npc/re/jobs/3-2/wanderer.txt
 // - Novice
-npc: npc/re/jobs/novice/academy.txt
+//npc: npc/re/jobs/novice/academy.txt
+// - Novice traduzido
+npc: npc/re/jobs/novice/pt-br/academy.txt
 // npc: npc/re/jobs/novice/novice.txt
 npc: npc/re/jobs/novice/supernovice_ex.txt
 // - Job Repairs
