--- a/npc/scripts_jobs.conf
+++ b/npc/scripts_jobs.conf
@@ -45,30 +45,34 @@ npc: npc/jobs/2-1a/pt-br/WhiteSmith.txt
 npc: npc/jobs/2-1e/StarGladiator.txt
 // - 2-2
 npc: npc/jobs/2-2/alchemist.txt
-npc: npc/jobs/2-2/bard.txt
+//npc: npc/jobs/2-2/bard.txt
 npc: npc/jobs/2-2/crusader.txt
 npc: npc/jobs/2-2/dancer.txt
 npc: npc/jobs/2-2/monk.txt
 npc: npc/jobs/2-2/rogue.txt
 npc: npc/jobs/2-2/sage.txt
+// - 2-2 traduzido
+npc: npc/jobs/2-2/pt-br/bard.txt
 // - 2-2 Transcended
 //npc: npc/jobs/2-2a/Champion.txt
 //npc: npc/jobs/2-2a/Clown.txt
-npc: npc/jobs/2-2a/Creator.txt
-npc: npc/jobs/2-2a/Gypsy.txt
-npc: npc/jobs/2-2a/Paladin.txt
-npc: npc/jobs/2-2a/Professor.txt
-npc: npc/jobs/2-2a/Stalker.txt
-//- 2-2 Transcended traduzido
-npc: npc/jobs/2-2a/pt-br/Champion.txt
-npc: npc/jobs/2-2a/pt-br/Clown.txt
 //npc: npc/jobs/2-2a/Creator.txt
 //npc: npc/jobs/2-2a/Gypsy.txt
 //npc: npc/jobs/2-2a/Paladin.txt
 //npc: npc/jobs/2-2a/Professor.txt
 //npc: npc/jobs/2-2a/Stalker.txt
+//- 2-2 Transcended traduzido
+npc: npc/jobs/2-2a/pt-br/Champion.txt
+npc: npc/jobs/2-2a/pt-br/Clown.txt
+npc: npc/jobs/2-2a/Creator.txt
+npc: npc/jobs/2-2a/Gypsy.txt
+npc: npc/jobs/2-2a/Paladin.txt
+npc: npc/jobs/2-2a/Professor.txt
+npc: npc/jobs/2-2a/Stalker.txt
 // - 2-2 Expanded
-npc: npc/jobs/2-2e/SoulLinker.txt
+//npc: npc/jobs/2-2e/SoulLinker.txt
+// - 2-2 Expanded traduzido
+npc: npc/jobs/2-2e/pt-br/SoulLinker.txt
 // - Novice
 npc: npc/jobs/novice/supernovice.txt
 // - Transcended Quest (2-x -> High Novice)
