--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -5,7 +5,8 @@
 //      Place your scripts here!
 
 // npcs adicionais
-npc: npc/custom/servidor/teste_server.txt
+//npc: npc/custom/servidor/teste_server.txt
+npc: npc/custom/servidor/utilidades.txt
 npc: npc/custom/servidor/npc_doacao.txt
 npc: npc/custom/servidor/torsen.txt
 
@@ -14,7 +15,7 @@ npc: npc/custom/servidor/doublerate.txt
 
 // ----------------------- Basic Scripts -----------------------
 npc: npc/custom/warper.txt
-//npc: npc/custom/jobmaster.txt
+npc: npc/custom/jobmaster.txt
 npc: npc/custom/platinum_skills.txt
 npc: npc/custom/healer.txt
 npc: npc/custom/breeder.txt
